# IMU_filter_ROS_IRL

./: CMakeLists.txt  README.md  package.xml
config/: params.yaml
imu_filter_ros_irl/config/: params.yaml
imu_filter_ros_irl/launch/: imu_ekf_node.launch
imu_filter_ros_irl/scripts/: euler_plotter.py
include/: butterworth.h  ekf_imu.h
src/: butterworth.cpp  imu_ekf_node.cpp
