<?xml version="1.0"?>
<package format="2">
  <name>imu_filter_ros_irl</name>
  <version>0.0.0</version>
  <description>The filter for IMU on ROS package</description>

  <maintainer email="hoanghung21301580@gmail.com">Hoang Quoc Hung CBNU</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_filters</build_depend>
  <build_export_depend>eigen_conversions</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>eigen_conversions</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
